Fixed image on mobile 2

--- a/styles/_projects.scss
+++ b/styles/_projects.scss
@@ -18,7 +18,7 @@
         margin-bottom: 20px;
     }
     @include tablet {
-        width: 80%;
+        width: 90%;
     }
 }
 
